# Email-Service-Provider

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: create_manager_groupe.py  send_mailing.py
mailing/migrations/: 0001_initial.py  0002_message_alter_recipient_options.py  0003_alter_recipient_options_mailing.py  0004_rename_recipient_mailing_recipients.py  0005_mailingattempt.py  0006_alter_mailing_message_alter_mailing_recipients_and_more.py  0007_mailing_owner_message_owner_recipient_owner.py  0008_alter_mailing_options.py  0009_alter_mailing_options_mailing_is_active.py
mailing/templates/: base.html
mailing/templates/includes/: footer.html  menu.html
mailing/templates/mailing/: home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailingattempt_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  recipient_confirm_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_token.py  0003_alter_customuser_options.py
users/templates/users/: customuser_detail.html  customuser_list.html  login.html  profile_update.html  register.html
