[project]
name = "pythonproject18"
version = "0.1.0"
description = ""
authors = [
    {name = "Lilith",email = "bichakhchyanlilith1992@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "black (>=26.3.1,<27.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
